--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
                 </div>
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="#products">Productos</a></li>
+                    <li><a href="./crud.html">Administración</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
                     <li><a href="./cart.html">Carrito</a></li>
                 </ul>
@@ -31,7 +31,7 @@
             <nav class="header-content-nav">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="#products">Productos</a></li>
+                    <li><a href="./crud.html">Administración</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
                     <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
