crud - baja y modificacion

--- a/crud.html
+++ b/crud.html
@@ -51,7 +51,7 @@
                 </div>
                 <button  class="btn-product-create" id="btn-product-create">Nuevo Producto</button>
             </section>
-            <form class="crud-form" method="post" id="crud-form">
+            <form class="crud-form" method="post" id="crud-form" data-record-id="">
 
                 <div class="crud-form-inputs">
                     <label for="product-name">Nombre <span>*</span></label>
@@ -93,8 +93,8 @@
                     <label for="producto-price">Precio</label>
                     <input 
                         type="number" 
-                        id="producto-price" 
-                        name="producto-price" 
+                        id="product-price" 
+                        name="product-price" 
                         class="crud-control" 
                     >
                 </div>
