--- a/cart.html
+++ b/cart.html
@@ -33,7 +33,7 @@
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./crud.html">Administración</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
-                    <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
+                    <li><a href="./cart.html" id="cart-badge">🛒</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,35 +41,19 @@
     <!-- Contenido principal -->
      <main class="container">
         <!-- Detalle del carrito -->
-        <section class="cart">
-            <div class="cart-items">
-                <div class="cart-item">
-                    <img src="./img/celular.jpg">
-                    <div class="item-info">Celular Motorola G05 4GB 128GB</div>
-                    <div class="item-price">$ 158.000.-</div>
-                </div>
-                <div class="cart-item-quantity">
-                    <div class="btn-cart-add">-</div>
-                    <div class="btn-cart-q">Cantidad: 1</div>
-                    <div class="btn-cart-del">+</div>
-                </div>
-            </div>
-            
-            <div class="cart-total">
-                <div class="cart-total-sub"><span>Subtotal:</span> <span>$ 158.000.-</span></div>
-                <div class="cart-total-ship"><span>Envío:</span> <span>$ 3.000.-</span></div>
-                <div class="cart-total-sum"><span>Total:</span> <span>$ 161.000.-</span></div>
-            </div>
-        <!-- Botones -->
-            <a href="./index.html" class="btn-cart-back">Seguir comprando</a>
-            <a href="#products" class="btn-cart-buy">Comprar</a>
+        <section class="cart" id="cart">
+            <!-- Imagen del producto -->
+        </section>
+        <section class="cart" id="cart-info">
+            <!-- Totales y botones -->
+            <div class="cart-total" id="cart-total"></div>
         </section>
         
 
      </main>
     <!-- Footer -->
     <script src="./js/data.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/cart.js"></script>
     <footer>
         <p>&copy; 2025 ISTEA - Programación Web.</p>
         <p>
