--- a/crud.html
+++ b/crud.html
@@ -33,7 +33,7 @@
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./crud.html">Administración</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
-                    <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
+                    <li><a href="./cart.html" id="cart-badge">🛒</a></li>
                 </ul>
             </nav>
         </div>
